--- a/frontend/src/components/Modal/modal.module.scss
+++ b/frontend/src/components/Modal/modal.module.scss
@@ -9,7 +9,7 @@
 
 .modalWrap {
   position: absolute;
-  background-color: gray;
+  background-color: white;
   top: 50%;
   left: 50%;
   min-width: 320px;
